Ensure captions in AMP carousels are aligned to bottom edge

--- a/assets/css/src/amp-default.css
+++ b/assets/css/src/amp-default.css
@@ -60,6 +60,7 @@ amp-carousel .amp-wp-gallery-caption {
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
 	padding: 1rem;
+	margin-bottom: 0;
 }
 
 amp-carousel .amp-wp-gallery-caption a {
